k8s/dht11.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dht11
  namespace: iot
  labels:
    app: dht11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dht11
  template:
    metadata:
      labels:
        app: dht11
    spec:
      containers:
      - name: dht11
        image: mhmdzawi/pi-mix-dht11:7f644be2ddc421f762930095ef8244871c296efc
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
