k8s/ingestor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestor
  namespace: iot
  labels:
    app: ingestor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestor
  template:
    metadata:
      labels:
        app: ingestor
    spec:
      containers:
      - name: ingestor
        image: mhmdzawi/pi-mix-ingestor:010322fc7f1091c94c5f6fa3ef21df2d7181da98
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          timeoutSeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 3
          periodSeconds: 20
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: vaio-server
  strategy:
    type: Recreate
