k8s/ir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ir
  namespace: iot
  labels:
    app: ir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ir
  template:
    metadata:
      labels:
        app: ir
    spec:
      containers:
      - name: ir
        image: mhmdzawi/pi-mix-ir:ead73fefbc32b76d9ac39275b26b616b841fa351
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        volumeMounts:
        - name: actions
          mountPath: /etc/ir-actions.json
          subPath: ir-actions.json
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
      volumes:
      - name: actions
        configMap:
          name: ir-actions
          optional: true
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
