k8s/ldr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldr
  namespace: iot
  labels:
    app: ldr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldr
  template:
    metadata:
      labels:
        app: ldr
    spec:
      containers:
      - name: ldr
        image: mhmdzawi/pi-mix-ldr:3a5936868e2fee68811a3f6ed9a43e2d1b2388d1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
