k8s/scale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scale
  namespace: iot
  labels:
    app: scale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scale
  template:
    metadata:
      labels:
        app: scale
    spec:
      containers:
      - name: scale
        image: mhmdzawi/pi-mix-scale:2bbfb424bc1cea18bdf8cfbb8174ef23a17d20b5
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        volumeMounts:
        - name: dbus
          mountPath: /run/dbus
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
      volumes:
      - name: dbus
        hostPath:
          path: /run/dbus
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
