k8s/serial-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serial-bridge
  namespace: iot
  labels:
    app: serial-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serial-bridge
  template:
    metadata:
      labels:
        app: serial-bridge
    spec:
      containers:
      - name: bridge
        image: mhmdzawi/pi-mix-serial-bridge:506393c
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 9600
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
        readinessProbe:
          exec:
            command:
            - /bridge
            - -check
          timeoutSeconds: 7
          periodSeconds: 15
          failureThreshold: 3
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
