k8s/ultrasonic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ultrasonic
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ultrasonic
  template:
    metadata:
      labels:
        app: ultrasonic
    spec:
      containers:
        - name: ultrasonic
          image: mhmdzawi/pi-mix-ultrasonic:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
