k8s/api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: iot
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: mhmdzawi/pi-mix-api-server:4b41fe122c7eb3717f705bb8855edd66a6ecf4ec
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          timeoutSeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 3
          periodSeconds: 20
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: iot
spec:
  selector:
    app: api-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
