k8s/victoriametrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoriametrics
  namespace: iot
  labels:
    app: victoriametrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: victoriametrics
  template:
    metadata:
      labels:
        app: victoriametrics
    spec:
      containers:
      - name: victoriametrics
        image: victoriametrics/victoria-metrics:v1.101.0
        args:
        - -storageDataPath=/storage
        - -retentionPeriod=1y
        ports:
        - containerPort: 8428
          name: http
        volumeMounts:
        - name: storage
          mountPath: /storage
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 512Mi
        env: []
        readinessProbe:
          httpGet:
            path: /health
            port: 8428
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8428
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 3
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: victoriametrics-data
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: vaio-server
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
  namespace: iot
spec:
  selector:
    app: victoriametrics
  ports:
  - protocol: TCP
    port: 8428
    targetPort: http
