k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: iot
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: mhmdzawi/pi-mix-dashboard:ec23b79ea74f460274ea6eacbc3273b765e7c6b8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 128Mi
        env: []
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: the-bear
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: iot
spec:
  selector:
    app: dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: iot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 80
